--- a/src/features/renderCardsInColumns.css
+++ b/src/features/renderCardsInColumns.css
@@ -1,7 +1,7 @@
-[btd-render-cards='true'] .js-column:is([data-column-size='medium'], [data-column-size='small'], [data-column-size='large']) {
-  /** Padding above cards in columns */
+[btd-render-cards='true'] {
+  /** Margin above cards in columns */
   & .js-tweet[btd-card] .js-card-container {
-    padding-top: 10px;
+    margin-top: 10px;
   }
   /* Cards act weird and don't load in Collections columns */
   &[data-column-type='col_customtimeline'] .js-tweet[btd-card] .js-card-container {
@@ -9,7 +9,7 @@
   }
   /* Article preview, large */
   & .js-tweet[btd-card='summary_large_image'] .js-card-container {
-    min-height: 206px;
+    min-height: 221px;
   }
   /* Article preview */
   & .js-tweet[btd-card='summary'] .js-card-container {
