--- a/src/features/badgesOnTopOfAvatars.css
+++ b/src/features/badgesOnTopOfAvatars.css
@@ -15,7 +15,8 @@
     height: 1em;
     background-size: 100% 100%;
     background-repeat: no-repeat;
-    font-size: 18px;
+    font-size: 16px;
+    filter: drop-shadow(0 1px 2px rgba(0, 0, 0, 0.2));
     z-index: 9;
   }
 
@@ -45,8 +46,8 @@
   }
 
   & .js-stream-item.btd-mini-badge > .js-stream-item-content > .activity-header > .nbfc::before {
-    top: 7px;
-    left: 8px;
+    top: 8px;
+    left: 10px;
     transform-origin: bottom right;
     transform: scale(0.7);
   }
@@ -61,6 +62,12 @@
   & .js-stream-item.btd-badge.btd-verified-badge:not(.btd-mini-badge) > .js-stream-item-content > .tweet > .tweet-header .item-img.tweet-img::before,
   & .js-stream-item.btd-badge.btd-verified-badge:not(.btd-mini-badge) > .js-stream-item-content > .tweet-detail .account-summary .item-img::before {
     background-image: url('../assets/verified-icon.svg');
+  }
+
+  & .js-stream-item.btd-mini-badge.btd-mutual-badge > .js-stream-item-content > .activity-header > .nbfc::before,
+  & .js-stream-item.btd-badge.btd-mutual-badge:not(.btd-mini-badge) > .js-stream-item-content > .tweet > .tweet-header .item-img.tweet-img::before,
+  & .js-stream-item.btd-badge.btd-mutual-badge:not(.btd-mini-badge) > .js-stream-item-content > .tweet-detail .account-summary .item-img::before {
+    background-image: url('../assets/heart-icon.svg');
   }
 
   & .js-stream-item.btd-mini-badge.btd-translator-badge > .js-stream-item-content > .activity-header > .nbfc::before,
