--- a/src/features/renderCardsInColumns.css
+++ b/src/features/renderCardsInColumns.css
@@ -7,9 +7,9 @@
   &[data-column-type='col_customtimeline'] .js-tweet[btd-card] .js-card-container {
     min-height: initial !important;
   }
-  /* Article preview, large */
+  /* Article preview, large (should be around 220px but sometimes the card doesnt have an image so it ends up smaller despite the name */
   & .js-tweet[btd-card='summary_large_image'] .js-card-container {
-    min-height: 221px;
+    min-height: 85px;
   }
   /* Article preview */
   & .js-tweet[btd-card='summary'] .js-card-container {
@@ -30,7 +30,7 @@
   /* Moment, "Events" and live videos */
   & .js-tweet[btd-card='745291183405076480:live_event'] .js-card-container,
   & .js-tweet[btd-card='745291183405076480:live_video'] .js-card-container {
-    height: 226px;
+    min-height: 85px;
   }
   /* Player */
   & .js-tweet[btd-card='player'] .js-card-container {
