--- a/src/features/badgesOnTopOfAvatars.css
+++ b/src/features/badgesOnTopOfAvatars.css
@@ -64,10 +64,16 @@
     background-image: url('../assets/verified-icon.svg');
   }
 
-  & .js-stream-item.btd-mini-badge.btd-mutual-badge > .js-stream-item-content > .activity-header > .nbfc::before,
-  & .js-stream-item.btd-badge.btd-mutual-badge:not(.btd-mini-badge) > .js-stream-item-content > .tweet > .tweet-header .item-img.tweet-img::before,
-  & .js-stream-item.btd-badge.btd-mutual-badge:not(.btd-mini-badge) > .js-stream-item-content > .tweet-detail .account-summary .item-img::before {
+  & .js-stream-item.btd-mini-badge.btd-mutual-badge.btd-mutual-heart > .js-stream-item-content > .activity-header > .nbfc::before,
+  & .js-stream-item.btd-badge.btd-mutual-heart.btd-mutual-badge:not(.btd-mini-badge) > .js-stream-item-content > .tweet > .tweet-header .item-img.tweet-img::before,
+  & .js-stream-item.btd-badge.btd-mutual-heart.btd-mutual-badge:not(.btd-mini-badge) > .js-stream-item-content > .tweet-detail .account-summary .item-img::before {
     background-image: url('../assets/heart-icon.svg');
+  }
+
+  & .js-stream-item.btd-mini-badge.btd-mutual-badge.btd-mutual-arrows > .js-stream-item-content > .activity-header > .nbfc::before,
+  & .js-stream-item.btd-badge.btd-mutual-arrows.btd-mutual-badge:not(.btd-mini-badge) > .js-stream-item-content > .tweet > .tweet-header .item-img.tweet-img::before,
+  & .js-stream-item.btd-badge.btd-mutual-arrows.btd-mutual-badge:not(.btd-mini-badge) > .js-stream-item-content > .tweet-detail .account-summary .item-img::before {
+    background-image: url('../assets/mutual-icon.svg');
   }
 
   & .js-stream-item.btd-mini-badge.btd-translator-badge > .js-stream-item-content > .activity-header > .nbfc::before,
