Apply accent color to "show more" link
https://github.com/eramdam/BetterTweetDeck/issues/646

--- a/src/features/addAccentColors.css
+++ b/src/features/addAccentColors.css
@@ -46,7 +46,8 @@ html.dark {
   & .med-flaglink,
   & .med-origlink,
   & .follow-btn .icon,
-  & .follow-btn .Icon {
+  & .follow-btn .Icon,
+  & .conversation-more {
     color: var(--btd-accent-color);
   }
 
