--- a/src/features/mainStyles.css
+++ b/src/features/mainStyles.css
@@ -208,3 +208,22 @@ html body {
 html.dark body {
   background-color: #15202b;
 }
+
+.btd-official-label {
+  flex-basis: 100%;
+}
+
+.btd-official-label:hover {
+  color: #8899a6 !important;
+}
+
+.btd-official-label img {
+  margin-right: 2px;
+  height: 15px;
+  width: 15px;
+}
+
+.account-summary-text .btd-official-label {
+  display: inline-block;
+  margin-top: 4px;
+}
