--- a/src/features/mainStyles.css
+++ b/src/features/mainStyles.css
@@ -213,7 +213,7 @@ html.dark body {
   flex-basis: 100%;
 }
 
-.btd-official-label:hover {
+.tweet .btd-official-label:hover {
   color: #8899a6 !important;
 }
 
@@ -226,4 +226,8 @@ html.dark body {
 .account-summary-text .btd-official-label {
   display: inline-block;
   margin-top: 4px;
+}
+
+.prf-header .btd-official-label img {
+  filter: brightness(100) drop-shadow(0 1px 1px rgba(20, 23, 26, 0.8));
 }
