--- a/src/features/mainStyles.css
+++ b/src/features/mainStyles.css
@@ -209,25 +209,41 @@ html.dark body {
   background-color: #15202b;
 }
 
-.btd-official-label {
+.btd-profile-label:not(.pronouns) {
   flex-basis: 100%;
 }
 
-.tweet .btd-official-label:hover {
+.tweet .btd-profile-label:hover {
   color: #8899a6 !important;
 }
 
-.btd-official-label img {
+.btd-profile-label img {
   margin-right: 2px;
   height: 15px;
   width: 15px;
 }
 
-.account-summary-text .btd-official-label {
+.account-summary-text .btd-profile-label {
   display: inline-block;
   margin-top: 4px;
 }
 
-.prf-header .btd-official-label img {
+.prf-header .btd-profile-label img {
   filter: brightness(100) drop-shadow(0 1px 1px rgba(20, 23, 26, 0.8));
+}
+
+.btd-profile-label.pronouns + .other-replies {
+  text-transform: lowercase;
+}
+
+.btd-profile-label.pronouns + .other-replies::before {
+  content: '\00A0\00B7';
+}
+
+.btd-profile-label.pronouns + .other-replies > a {
+  text-transform: none;
+}
+
+.pronouns-wrapper + .pronouns-wrapper {
+  display: none !important;
 }
