--- a/src/features/badgesOnTopOfAvatars.css
+++ b/src/features/badgesOnTopOfAvatars.css
@@ -1,13 +1,18 @@
 .btd-loaded[btd-badges-top-avatar='true'] {
+  & .fullname-badged {
+    padding-right: 0;
+  }
   & .js-stream-item.btd-badge:not(.btd-mini-badge) > .js-stream-item-content > .tweet > .tweet-header .item-img.tweet-img,
   & .js-stream-item.btd-mini-badge > .js-stream-item-content > .activity-header > .nbfc,
-  & .js-stream-item.btd-badge:not(.btd-mini-badge) > .js-stream-item-content > .tweet-detail .account-summary .item-img {
+  & .js-stream-item.btd-badge:not(.btd-mini-badge) > .js-stream-item-content > .tweet-detail .account-summary .item-img,
+  & .js-stream-item.btd-badge:not(.btd-mini-badge) > .js-stream-item-content > .account-summary .item-img {
     position: relative;
   }
 
   & .js-stream-item.btd-mini-badge > .js-stream-item-content > .activity-header > .nbfc::before,
   & .js-stream-item.btd-badge:not(.btd-mini-badge) > .js-stream-item-content > .tweet > .tweet-header .item-img.tweet-img::before,
-  & .js-stream-item.btd-badge:not(.btd-mini-badge) > .js-stream-item-content > .tweet-detail .account-summary .item-img::before {
+  & .js-stream-item.btd-badge:not(.btd-mini-badge) > .js-stream-item-content > .tweet-detail .account-summary .item-img::before,
+  & .js-stream-item.btd-badge:not(.btd-mini-badge) > .js-stream-item-content > .account-summary .item-img::before {
     content: '';
     line-height: 1;
     position: absolute;
@@ -33,7 +38,8 @@
     right: -3px;
   }
 
-  & .js-stream-item.btd-badge:not(.btd-mini-badge) > .js-stream-item-content > .tweet-detail .account-summary .item-img::before {
+  & .js-stream-item.btd-badge:not(.btd-mini-badge) > .js-stream-item-content > .tweet-detail .account-summary .item-img::before,
+  & .js-stream-item.btd-badge:not(.btd-mini-badge) > .js-stream-item-content > .account-summary .item-img::before {
     bottom: -3px;
     right: -3px;
   }
@@ -60,25 +66,29 @@
 
   & .js-stream-item.btd-mini-badge.btd-verified-badge > .js-stream-item-content > .activity-header > .nbfc::before,
   & .js-stream-item.btd-badge.btd-verified-badge:not(.btd-mini-badge) > .js-stream-item-content > .tweet > .tweet-header .item-img.tweet-img::before,
-  & .js-stream-item.btd-badge.btd-verified-badge:not(.btd-mini-badge) > .js-stream-item-content > .tweet-detail .account-summary .item-img::before {
+  & .js-stream-item.btd-badge.btd-verified-badge:not(.btd-mini-badge) > .js-stream-item-content > .tweet-detail .account-summary .item-img::before,
+  & .js-stream-item.btd-badge.btd-verified-badge:not(.btd-mini-badge) > .js-stream-item-content > .account-summary .item-img::before {
     background-image: url('../assets/verified-icon.svg');
   }
 
   & .js-stream-item.btd-mini-badge.btd-mutual-badge.btd-mutual-heart > .js-stream-item-content > .activity-header > .nbfc::before,
   & .js-stream-item.btd-badge.btd-mutual-heart.btd-mutual-badge:not(.btd-mini-badge) > .js-stream-item-content > .tweet > .tweet-header .item-img.tweet-img::before,
-  & .js-stream-item.btd-badge.btd-mutual-heart.btd-mutual-badge:not(.btd-mini-badge) > .js-stream-item-content > .tweet-detail .account-summary .item-img::before {
+  & .js-stream-item.btd-badge.btd-mutual-heart.btd-mutual-badge:not(.btd-mini-badge) > .js-stream-item-content > .tweet-detail .account-summary .item-img::before,
+  & .js-stream-item.btd-badge.btd-mutual-heart.btd-mutual-badge:not(.btd-mini-badge) > .js-stream-item-content > .account-summary .item-img::before {
     background-image: url('../assets/heart-icon.svg');
   }
 
   & .js-stream-item.btd-mini-badge.btd-mutual-badge.btd-mutual-arrows > .js-stream-item-content > .activity-header > .nbfc::before,
   & .js-stream-item.btd-badge.btd-mutual-arrows.btd-mutual-badge:not(.btd-mini-badge) > .js-stream-item-content > .tweet > .tweet-header .item-img.tweet-img::before,
-  & .js-stream-item.btd-badge.btd-mutual-arrows.btd-mutual-badge:not(.btd-mini-badge) > .js-stream-item-content > .tweet-detail .account-summary .item-img::before {
+  & .js-stream-item.btd-badge.btd-mutual-arrows.btd-mutual-badge:not(.btd-mini-badge) > .js-stream-item-content > .tweet-detail .account-summary .item-img::before,
+  & .js-stream-item.btd-badge.btd-mutual-arrows.btd-mutual-badge:not(.btd-mini-badge) > .js-stream-item-content > .account-summary .item-img::before {
     background-image: url('../assets/mutual-icon.svg');
   }
 
   & .js-stream-item.btd-mini-badge.btd-translator-badge > .js-stream-item-content > .activity-header > .nbfc::before,
   & .js-stream-item.btd-badge.btd-translator-badge:not(.btd-mini-badge) > .js-stream-item-content > .tweet > .tweet-header .item-img.tweet-img::before,
-  & .js-stream-item.btd-badge.btd-translator-badge:not(.btd-mini-badge) > .js-stream-item-content > .tweet-detail .account-summary .item-img::before {
+  & .js-stream-item.btd-badge.btd-translator-badge:not(.btd-mini-badge) > .js-stream-item-content > .tweet-detail .account-summary .item-img::before,
+  & .js-stream-item.btd-badge.btd-translator-badge:not(.btd-mini-badge) > .js-stream-item-content > .account-summary .item-img::before {
     background-image: url('../assets/translator-icon.svg');
   }
 }
