--- a/src/features/muteNfts.css
+++ b/src/features/muteNfts.css
@@ -27,6 +27,8 @@
   }
 
   & .nft-choices {
+    margin-top: 30px;
+    margin-bottom: 30px;
     display: flex;
     justify-content: space-between;
     flex-direction: column;
