--- a/src/features/emojiPicker.css
+++ b/src/features/emojiPicker.css
@@ -14,9 +14,10 @@ html .btd-loaded {
     font-size: 14px;
     display: inline-block;
     color: #222427;
-    border: 1px solid #d9d9d9;
+    border: none !important;
     border-radius: 5px;
     background: #fff;
+    box-shadow: 0 0px 2px rgba(0, 0, 0, 0.4), 0 1px 15px rgba(0, 0, 0, 0.4);
   }
 
   & .emoji-mart .emoji-mart-emoji {
