Make cards smaller when the column has a media size of small
https://github.com/eramdam/BetterTweetDeck/issues/742

--- a/src/features/mainStyles.css
+++ b/src/features/mainStyles.css
@@ -234,3 +234,11 @@ i.icon-btd {
   background-image: url('../assets/btd-logo-small.png');
   background-size: 100%;
 }
+
+section[data-column-size='small'] .hw-card-container {
+  width: 50% !important;
+}
+
+section[data-column-size='small'] .hw-card-container div[style*='-webkit-line-clamp'] {
+  -webkit-line-clamp: 1 !important;
+}
