--- a/src/features/muteNfts.css
+++ b/src/features/muteNfts.css
@@ -1,9 +1,9 @@
-.avatar--hexagone {
+.avatar--hexagon {
   mask-image: url('../assets/hexagone-mask.png');
   mask-mode: alpha;
   mask-size: 100%;
 }
 
-img.avatar:not(.avatar--hexagone) {
+img.avatar:not(.avatar--hexagon) {
   background-color: white;
 }
