--- a/src/features/mediaWarnings.css
+++ b/src/features/mediaWarnings.css
@@ -64,6 +64,54 @@ details.media-warning > div {
   grid-row-gap: 8px;
   padding: 15px;
   color: white;
+  line-height: 1.3;
+}
+
+[data-column-size='small'] {
+  /* Special styles for the small + one image case because it gets super tiny x_x */
+  & details.media-warning.media-warning-1 > div > .show-button-row {
+    display: none !important;
+  }
+  & details.media-warning.media-warning-1 > div {
+    grid-row-gap: 4px;
+    padding: 5px 10px;
+    font-size: 12px;
+  }
+  & details:not([open]).media-warning-1 > summary {
+    right: calc(50% + 4px);
+  }
+}
+
+body.is-medium-columns,
+body.is-narrow-columns {
+  & [data-column-size='small'],
+  & [data-column-size='medium'] {
+    & details.media-warning > div {
+    }
+    & details.media-warning > div > strong,
+    & details.media-warning > div > span {
+      -webkit-line-clamp: 1;
+    }
+    & details.media-warning > div > .show-button-row {
+      display: none !important;
+    }
+  }
+}
+
+body.is-medium-columns [data-column-size='medium'] {
+  & details.media-warning > div > strong,
+  & details.media-warning > div > span {
+    -webkit-line-clamp: 2;
+  }
+}
+
+details.media-warning > div > strong,
+details.media-warning > div > span {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-inline-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
 }
 
 details.media-warning > div > .show-button-row {
