--- a/src/features/blueVerified.css
+++ b/src/features/blueVerified.css
@@ -1,11 +1,37 @@
+.btd-loaded[btd-verified-blue-badge='dollar'] {
+  --blueVerifiedImage: url('../assets/dollar-icon.svg') !important;
+}
+.btd-loaded[btd-verified-blue-badge='nerd'] {
+  --blueVerifiedImage: url('../assets/nerd-checkmark.svg') !important;
+}
+.btd-loaded[btd-verified-blue-badge='clown'] {
+  --blueVerifiedImage: url('../assets/clown-icon.svg') !important;
+}
+.btd-loaded[btd-verified-blue-badge='blue'] {
+  --blueVerifiedImage: url('../assets/twitter-blue.svg') !important;
+}
+.btd-loaded[btd-verified-blue-badge='crooked'] {
+  --blueVerifiedImage: url('../assets/crooked-icon.svg') !important;
+}
+
+html.dark .sprite.verified-blue,
 .sprite.verified-blue {
   height: 20px;
   width: 20px;
-  background-image: url('../assets/nerd-checkmark.svg') !important;
+  background-image: var(--blueVerifiedImage);
   background-position: 0 !important;
   background-size: 100% 100% !important;
 }
 
 .btd-badge .sprite.verified-blue {
   display: none;
+}
+
+.btd-loaded[btd-badges-top-avatar='true'] {
+  & .js-stream-item.btd-mini-badge.btd-blue-verified-badge > .js-stream-item-content > .activity-header > .nbfc::before,
+  & .js-stream-item.btd-badge.btd-blue-verified-badge:not(.btd-mini-badge) > .js-stream-item-content > .tweet > .tweet-header .item-img.tweet-img::before,
+  & .js-stream-item.btd-badge.btd-blue-verified-badge:not(.btd-mini-badge) > .js-stream-item-content > .tweet-detail .account-summary .item-img::before,
+  & .js-stream-item.btd-badge.btd-blue-verified-badge:not(.btd-mini-badge) > .js-stream-item-content > .account-summary .item-img::before {
+    background-image: var(--blueVerifiedImage);
+  }
 }
